src/objects/Trifecta_Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Choices__c</fullName>
        <description>Comma Seperated values of the question choices</description>
        <label>Choices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help_text__c</fullName>
        <description>Help text to explain the user about the sample response to be filled.</description>
        <label>Help text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Unique value for every Survey Question record created.</description>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sort_Index__c</fullName>
        <description>Number to arrange the question in the survey form generated</description>
        <label>Sort Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Trifecta_Survey__c</referenceTo>
        <relationshipLabel>Trifecta Survey Questions</relationshipLabel>
        <relationshipName>Trifecta_Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the question</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the question ex: Text, Multi Select or Checkbox</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multi Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to mark this as a required question</description>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>Trifecta Survey Question</label>
    <nameField>
        <displayFormat>SQ-{000000}</displayFormat>
        <label>Trifecta Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trifecta Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>